@@ -1,4 +1,4 @@
-Copyright (c) 2012-2020 Michal Špaček
+Copyright (c) 2012-2020 Michal Josef Špaček
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification,
