@@ -1,7 +1,7 @@
 ---
 abstract: 'Perl class for video frames pattern generating.'
 author:
-  - 'Michal Spacek <skim@cpan.org>'
+  - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
   English: 0
   Error::Pure::Utils: '0.17'
