@@ -124,12 +124,12 @@ REPOSITORY
     <https://github.com/tupinek/Video-Pattern>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2012-2020 Michal Špaček
+     © 2012-2020 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
